...
            android:layout_marginTop="16dp"
            android:text="@string/camera_permission_grant_button" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/camera_capture_content_description"
        app:srcCompat="@drawable/ic_lucide_camera"
        app:layout_constraintBottom_toBottomOf="parent"
...
