...
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/dashboard_seniors_section_title"
                android:textAppearance="?attr/textAppearanceHeadlineSmall" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewSeniorsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/dashboard_view_seniors_button" />

            <com.google.android.material.button.MaterialButton
...
